{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 86,
  "lineage": "44e834fa-e5b8-e61b-d5ce-711de8847b83",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_admin_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-30T23:13:30.413-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ai-security-test-473701/global/firewalls/boanclaw-allow-admin",
            "log_config": [],
            "name": "boanclaw-allow-admin",
            "network": "https://www.googleapis.com/compute/v1/projects/ai-security-test-473701/global/networks/boanclaw-vpc-sds-corp",
            "priority": 1000,
            "project": "ai-security-test-473701",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ai-security-test-473701/global/firewalls/boanclaw-allow-admin",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "boan-admin"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.boan_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080",
                  "8090",
                  "18080",
                  "18081"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-30T23:13:30.535-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ai-security-test-473701/global/firewalls/boanclaw-allow-internal",
            "log_config": [],
            "name": "boanclaw-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/ai-security-test-473701/global/networks/boanclaw-vpc-sds-corp",
            "priority": 1000,
            "project": "ai-security-test-473701",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ai-security-test-473701/global/firewalls/boanclaw-allow-internal",
            "source_ranges": [
              "10.100.0.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.boan_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_proxy_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443",
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-30T23:13:30.581-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ai-security-test-473701/global/firewalls/boanclaw-allow-proxy-egress",
            "log_config": [],
            "name": "boanclaw-allow-proxy-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/ai-security-test-473701/global/networks/boanclaw-vpc-sds-corp",
            "priority": 1000,
            "project": "ai-security-test-473701",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ai-security-test-473701/global/firewalls/boanclaw-allow-proxy-egress",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "boan-proxy"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.boan_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "deny_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2026-03-30T23:13:30.425-07:00",
            "deny": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ai-security-test-473701/global/firewalls/boanclaw-deny-egress",
            "log_config": [],
            "name": "boanclaw-deny-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/ai-security-test-473701/global/networks/boanclaw-vpc-sds-corp",
            "priority": 65534,
            "project": "ai-security-test-473701",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ai-security-test-473701/global/firewalls/boanclaw-deny-egress",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.boan_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "boan_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/ai-security-test-473701/global/networks/boanclaw-vpc-sds-corp",
            "mtu": 0,
            "name": "boanclaw-vpc-sds-corp",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "5295502998949518097",
            "project": "ai-security-test-473701",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ai-security-test-473701/global/networks/boanclaw-vpc-sds-corp"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "boan_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-03-30T23:13:31.153-07:00",
            "gateway_address": "10.100.0.1",
            "id": "projects/ai-security-test-473701/regions/asia-northeast3/subnetworks/boanclaw-subnet-sds-corp",
            "ip_cidr_range": "10.100.0.0/24",
            "name": "boanclaw-subnet-sds-corp",
            "network": "https://www.googleapis.com/compute/v1/projects/ai-security-test-473701/global/networks/boanclaw-vpc-sds-corp",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "ai-security-test-473701",
            "purpose": "PRIVATE",
            "region": "asia-northeast3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ai-security-test-473701/regions/asia-northeast3/subnetworks/boanclaw-subnet-sds-corp",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.boan_vpc"
          ]
        }
      ]
    }
  ]
}